# Songlist

./: .gitignore  00INFO  00TODO  1927.txt  Makefile  Makefile.am  Makefile.in  README  all.dvi  all.ps  all.tex  all_no_sep.dvi  all_no_sep.tex  all_sep.dvi  all_sep.tex  bluecircle.eps  circles.mp  circles.tex  cmdlnopt.cxx  cmdlnopt.hxx  cmdlnopt.web  composer_output.txt  composers.dvi  composers.ps  composers.tex  config.h  config.h.in  config.status  configure  configure.ac  cpyrttex.txt  cweb-mode.el  cweb_functions.el  cyrillic.tex  dump.sql  explanations.tex  filecrds.tex  fix_separate.el  french.tex  german.tex  (+63 more)
1928/: process_files.sh
1929/: 00INFO
1930/: 00INFO
1931/: 00INFO
backup/: composers.tex  lyricists.tex  pblcdomn.tex  scanned.tex  toc_ls.tex  toc_ls_a_h.tex  toc_ls_i_o.tex  toc_ls_p_z.tex  toc_npt.tex
chordcharts/: .gitignore  bouzoukifourtitle.tex  chordcharts.ldf  chordcharts.tex  chordcharts1.ldf  chordcharts1.tex  eightstringtitle.tex  plainldf.lmc
database/: 00INFO  00TODO  Songs_dump.sql  a_z_eps_filenames.sql  songlist.sql  songlist_1.sql  teddy_wilson.sql  ttemp.sql
lead_sheets/: .gitignore  README
m4/: dummy
public_domain/: .gitignore  Makefile  Makefile.am  Makefile.in  README  aintsswt1.eps  aintsswt2.eps  alcblgwn1.eps  alcblgwn2.eps  aprshw01.eps  aprshw02.eps  aprshw03.eps  aprshw04.eps  babyface1.eps  babyface2.eps  barkrl01.eps  barkrl02.eps  barkrl03.eps  barkrl04.eps  bill.eps  bltslvm1.eps  bltslvm2.eps  btnpvrct1.eps  btnpvrct2.eps  carolin1.eps  carolin2.eps  carolin3.eps  chicago1.eps  chicago2.eps  chord_symbols.tex  coquette1.eps  coquette2.eps  coquette3.eps  cupcof01.eps  cupcof02.eps  dummrt01.eps  dummrt02.eps  dummrt03.eps  fivefoot.eps  flwayido1.eps  (+150 more)
public_domain/backup_1/: songs_a_e.tex  songs_f_l.tex  songs_m_n.tex  songs_o_s.tex  songs_t_z.tex
ttemp/: ttemp.sh
